# agentwerewolf

./: .gitignore  DEPLOY.md  README.md  docker-compose.yml
api/: .dockerignore  .env.example  Dockerfile  README.md  SWITCHOVER.md  pyproject.toml
api/scripts/: seed_leaderboard.py
api/src/: agent_prompt.py  auth.py  badges.py  config.py  db.py  db_badges.py  db_replays.py  db_store.py  main.py  matchmaking.py  replays.py  store.py
api/src/game/: demo.py  elo.py  engine.py  prompts.py  state.py
api/src/llm/: anthropic.py  base.py  decide.py  google.py  openai.py
api/src/routers/: agents.py  billing.py  connected.py  games.py  leaderboards.py  users.py
api/src/schemas/: agent.py  game.py  task.py
api/tests/: test_engine.py
design/: HANDOFF.md  PRD.md
design/chats/: chat1.md
design/prototype/: builder.jsx  data.js  game-arena.jsx  index.html  landing.jsx  social.jsx
supabase/: README.md  apply_migration.py
supabase/migrations/: 0001_initial_schema.sql  0002_relax_user_fk_and_badges.sql  0003_drop_payment_columns.sql
web/: .dockerignore  Dockerfile  README.md  next.config.mjs  package-lock.json  package.json  tailwind.config.ts
web/src/: middleware.ts
web/src/app/: globals.css  layout.tsx  opengraph-image.tsx  page.tsx
web/src/app/account/: page.tsx
web/src/app/arena/: page.tsx
web/src/app/auth/: page.tsx
web/src/app/builder/: page.tsx
web/src/app/leaderboards/: page.tsx
web/src/app/pricing/: page.tsx
web/src/components/: nav.tsx  theme-toggle.tsx
web/src/components/game/: game-arena.tsx  (+2 more)
web/src/lib/: api.ts  mock-data.ts
(+7 files in other folders)
