[project]
name = "agentwerewolf-api"
version = "0.1.0"
description = "Agent Werewolf game engine + REST API"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115",
  "uvicorn[standard]>=0.32",
  "pydantic>=2.9",
  "pydantic-settings>=2.5",
  "httpx>=0.27",
  "python-jose[cryptography]>=3.3",
  "supabase>=2.9",
  "anthropic>=0.40",
  "openai>=1.54",
  "google-genai>=0.3",
  "stripe>=11.1",
]

[dependency-groups]
dev = [
  "pytest>=8.3",
  "pytest-asyncio>=0.24",
  "ruff>=0.7",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"
